--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "torch>=2.9.1",
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
+    "netifaces>=0.11.0",
 ]
 
 [project.scripts]
