--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
     "netifaces>=0.11.0",
+    "httpx>=0.27.0",
 ]
 
 [project.scripts]
