--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,21 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "faster-whisper>=1.2.1",
     "loguru>=0.7.3",
+    "httpx>=0.27.0",
+]
+
+[project.optional-dependencies]
+server = [
+    "faster-whisper>=1.2.1",
     "silero-vad>=6.2.0",
     "torch>=2.9.1",
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
     "netifaces>=0.11.0",
-    "httpx>=0.27.0",
 ]
 
 [project.scripts]
-stt-http-node = "stt.http_node:start"
 stt = "stt.cli:main"
 
 
